src/styles/landingpage.scss
body {
	display: flex;
	flex-direction: column;
}

.hero {
	width: 100vw;
	height: 100vh;
	display: flex;
	flex-direction: column;
	background-color: var(--yellow);
	padding: 40px;
	z-index: 0;

	.hero-h1-row {
		display: flex;
		column-gap: 8px;
		overflow: hidden;
		justify-content: space-between;
		height: 40%;

		.logo-letters {
			height: auto;
			width: auto;
		}
	}

	.hero-menu-row {
		overflow: hidden;

		ul {
			list-style-type: none;
			display: flex;
			width: 100%;
			justify-content: space-between;
		}
	}
}

a {
	display: flex; //because default to inline, which couldnt be transformed
	text-decoration: none;
	font-size: 24px;
}

.intro {
	height: 100vh;
	width: 100vw;
	position: fixed;
	z-index: 1;

	.intro-header {
		// position: absolute;
		z-index: 7;
		color: var(--white);
		font-size: 14vw;
		letter-spacing: 0px;
		display: flex;
		align-items: center;

	}

	span {
		color: var(--white);
	}

	.boxes {
		height: 100%;
		width: 100%;
		position: absolute;
	}

	.box-1 {
		display: flex;
		align-items: start;
		justify-content: end;
		flex-direction: column;
		padding: 40px;
		background-color: var(--black);
		z-index: 6;
	}

	.box-2 {
		background-color: #FFC371;
		z-index: 5;
	}

	.box-3 {
		background-color: #FFD200;
		z-index: 4;
	}

	.box-4 {
		background-color: #F7971E;
		z-index: 3;
	}

	.box-5 {
		background-color: #E94057;
		z-index: 2;
	}
}

.works {
	display: flex;
	flex-direction: column;
	background-color: var(--yellow);
	width: 100vw;
	height: 100vh;
	padding: 0px 40px;

	.works-header{
		font-weight: 500;
		font-size: 40px;
		color: var(--black);
	}

	.works-rows {
		width: 100%;
		height: auto;
		display: grid;
		grid-template-columns: 1fr 3fr 1fr;
		border-bottom: dashed 1px var(--black);
	}

	.works-col-1 {
		// background-color: red;
	}

	.works-col-2 {
		// background-color: blue;
	}

	.works-col-3 {
		// background-color: green;
	}
}

